Ensure full picture usage during interpolations and startups